--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,7 @@ spring.thymeleaf.cache = false
 
 spring.queries.users-query = select email, password, true from user where email=?
 spring.queries.roles-query = select u.email, r.role_type from user u inner join role r on(u.role_id = r.role_id) where u.email=?
+
+#======================================================
+# for the err 500
+spring.jackson.serialization.fail-on-empty-beans=false
